add 'color' modi
this commit adds several ways to change the color of the output via
ansi-escape-codes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ set(ustat_src ustat.c
     ustat_helper.c
     ustat_date.c ustat_load.c ustat_pass.c
     ustat_user.c ustat_color.c
+    djb/scan_ulong.c
     djb/str_start.c djb/str_len.c
     djb/fmt_ulong.c
 )
