--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,9 @@ set(ustat_src ustat.c
     ustat_helper.c
     ustat_date.c ustat_load.c ustat_pass.c
     ustat_user.c ustat_color.c
+    djb/byte_copy.c
     djb/scan_ulong.c
-    djb/str_start.c djb/str_len.c
+    djb/str_start.c djb/str_len.c djb/str_diffn.c
     djb/fmt_ulong.c
 )
 
