fix getloadavg() on linux: use /proc/loadavg
also: rewrite ustat_user to support builds against dietlibc which itself
does not support qsort_r().

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ set(ustat_src ustat.c
     djb/byte_copy.c
     djb/scan_ulong.c
     djb/str_start.c djb/str_len.c djb/str_diffn.c
+    djb/open_read.c
     djb/fmt_ulong.c
 )
 
