initial implementation of 'nproc' and 'ncpus'

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(ustat_src ustat.c
     ustat_date.c ustat_load.c ustat_pass.c
     ustat_mem.c
     ustat_user.c ustat_color.c
+    ustat_procs.c ustat_cpu.c
     djb/byte_copy.c
     djb/scan_ulong.c
     djb/str_start.c djb/str_len.c djb/str_diffn.c
