add fs (filesystem) modules
provide

* fst - filesystem-total
* fsth - filesystem-total, human readable
* fsf - filesystem-free
* fsfh - filesystem-free, human readable
* fsu - filesystem-used
* fsuh - filesystem-used, human readable
* fsr - filesystem (fill-) ratio

usage: ustat fsth/ - show the filesystem total for the "/" filesystem

ustat_fs_linux: faster scan of /proc/self/mountinfo

just double the used memory buffer on every read.

fix typo in comment

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ SET(ustat_src
     ustat_color.c
     ustat_cpu.c
     ustat_date.c
+    ustat_fs.c
     ustat_load.c
     ustat_mem.c
     ustat_tcp.c
@@ -17,6 +18,7 @@ SET(ustat_src
     ustat_helper/read_double_from_fd.c
     ustat_helper/scan_hex.c
     ustat_helper/write_8ll.c
+    ustat_helper/write_8ll_human.c
     ustat_helper/write_double.c
     djb/byte_copy.c djb/byte_zero.c
     djb/scan_ulong.c
