--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,12 +14,12 @@ SET(ustat_src
     ustat_procs.c
     ustat_spec.c
     ustat_user.c
-    ustat_helper/fmt_8ll.c
+    ustat_helper/fmt_uint64.c
     ustat_helper/os_exit.c
     ustat_helper/read_double_from_fd.c
     ustat_helper/scan_hex.c
-    ustat_helper/write_8ll.c
-    ustat_helper/write_8ll_human.c
+    ustat_helper/write_uint64.c
+    ustat_helper/write_uint64_human.c
     ustat_helper/write_double.c
     djb/byte_copy.c djb/byte_zero.c
     djb/scan_ulong.c
